fix spacing in aboutme

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -43,6 +43,7 @@ h1.AboutMe {
     font-size: 2.5rem;
     padding: 10% 0 0 0;
   }
+  margin-top: 5%;
 }
 
 h1.Personal-Projects {
@@ -65,7 +66,7 @@ p.AboutMe {
     height: 100%;
   }
   max-width: 75%;
-  padding: 0 0 5% 0;
+  margin: 5% 0 5% 0;
 }
 
 button.contact-me {
@@ -77,7 +78,6 @@ button.contact-me {
   color: white;
   font-size: 0.5rem;
   background-color: black;
-  box-shadow: 0px 8px 15px white;
   cursor: pointer;
   outline: none;
   border: none;
@@ -188,8 +188,8 @@ p.Project-Summary {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 15% 0 15% 0;
   max-height: 100%;
+  margin-top: 10%;
 }
 
 img.AboutMe-img {
